# sight-deps

./: .gitignore  .gitlab-ci.yml  .sight-deps  CHANGELOG.md  CMakeLists.txt  Install.cmake  README.md
boost/: boost_windows.cmake
boost/patch/android/: CMakeLists.txt
cmake/android/: android-arm-api23-clang-ndk.cmake
cmake/findBinpkgs/: fw-IGTL.cmake
cmake/utils/: cpack_install.cmake  fix_path.cmake  patch.cmake
dbow2/: CMakeLists.txt
dcmqi/: CMakeLists.txt
dcmqi/patch/: install_target.patch
eigen/: CMakeLists.txt
ffmpeg/: CMakeLists.txt  ffmpeg-linux.cmake  ffmpeg-win32.cmake
ffmpeg/scripts/: nv-codec-headers-linux.cmake.in
freetype/: CMakeLists.txt
freetype/patch/: CMakeLists.patch
g2o/: CMakeLists.txt
gdcm/: CMakeLists.txt
glew/: CMakeLists.txt
itk/: CMakeLists.txt
libSGM/: CMakeLists.txt
libarchive/: CMakeLists.txt
libarchive/patch/: android-linux.diff
ogre/: CMakeLists.txt
ogre/patch/: patches_transform_feedback_fix.patch  prevent-empty-compositor-render-targets.diff
opencv/: CMakeLists.txt
opencv/patch/: android.diff
openigtlink/: CMakeLists.txt
openigtlink/patch/: android_math.diff  android_pthread.diff
openvslam/: CMakeLists.txt
pangolin/: CMakeLists.txt
pcl/: CMakeLists.txt
qt/: CMakeLists.txt  qt_android.cmake  qt_apple.cmake  qt_linux.cmake  qt_windows.cmake
qt/patch/: C2338.patch
qt/patch/android/: pthread.diff
qt/patches/: xlib.diff
realsense/: CMakeLists.txt
tiff/: CMakeLists.txt
tiff/patch/: CMakeLists.txt  tif_config.vc.h.droid.diff  tiffconf.vc.h.droid.diff
vlc/: CMakeLists.txt
vtk/: CMakeLists.txt
